# Hackathon2

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  VERCEL_NEON_DEPLOYMENT.md  requirements-dev.txt  requirements.txt  verify_implementation.py
.specify/memory/: constitution.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  run.py  todo_app.db  vercel_app.py
backend/alembic/: env.py
backend/api/: index.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/auth/: signup.py
backend/src/api/middleware/: error_handler.py
backend/src/api/todos/: __init__.py  router.py
backend/src/core/: __init__.py  auth.py  config.py  database.py
backend/src/models/: __init__.py  todo.py  user.py
backend/src/schemas/: __init__.py  todo.py  user.py
backend/src/services/: __init__.py  auth_service.py  todo_service.py
frontend/: next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Modal.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/: __init__.py  api.ts  auth.tsx  index.ts
specs/001-phase-2-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-i-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/application/: errors.py  task_service.py
src/cli/: __init__.py  commands.py  display.py  menu.py  validation.py
src/domain/: task.py  task_repository.py
src/infrastructure/: __init__.py  in_memory_repository.py
tests/: __init__.py
(+21 files in other folders)
